fixing space in gaps for images

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 #channels-container {
     display: grid;
     grid-template-columns: repeat(3, auto);
-    grid-row-gap: 9em;
+    grid-row-gap: 6em;
     grid-column-gap: 2em;
     margin: 50px 0 0 0;
 }
